# point_glass_opengl

./: .metadata  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  build.gradle.kts  settings.gradle.kts
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: point_glass_opengl.dart  point_glass_opengl_bindings_generated.dart  point_glass_opengl_method_channel.dart  point_glass_opengl_platform_interface.dart
lib/src/core/: data_converter.dart  point_glass_opengl_controller.dart  (+1 more)
linux/: CMakeLists.txt  point_glass_opengl_plugin.cc  point_glass_opengl_plugin_private.h
linux/test/: point_glass_opengl_plugin_test.cc
rust/: Cargo.toml
rust/shaders/: gizmos.frag  gizmos.vert  points.frag  points.vert
rust/src/: lib.rs
src/: CMakeLists.txt  point_glass_opengl.c
test/: point_glass_opengl_method_channel_test.dart  point_glass_opengl_test.dart
windows/: CMakeLists.txt  point_glass_opengl_plugin.cpp  point_glass_opengl_plugin.h  point_glass_opengl_plugin_c_api.cpp
windows/include/point_glass_opengl/: point_glass_opengl_plugin.h  point_glass_opengl_plugin_c_api.h
windows/test/: point_glass_opengl_plugin_test.cpp
(+13 files in other folders)
